syntax = "proto3";

package product;

option go_package = "github.com/yourproject/common/protos/product";

service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
    rpc GetProduct (GetProductRequest) returns (ProductResponse);
    rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
    int32 stock = 4;
}

message GetProductRequest {
    string id = 1;
}

message ListProductsRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message ProductResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
    int32 stock = 5;
    string created_at = 6;
}

message ListProductsResponse {
    repeated ProductResponse products = 1;
    int32 total = 2;
}